--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,45 @@
 body {
-	font-family: Arial, sans-serif;
-	text-align: center;
-	margin-top: 50px;
+	font-family: "Lato", sans-serif;
 }
 
-#content {
-	background-color: #f9f9f9;
-	padding: 20px;
-	border-radius: 8px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+.sidenav {
+	height: 100%;
+	width: 0;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	background-color: #111;
+	overflow-x: hidden;
+	transition: 0.5s;
+	transform: rotate(-90deg) translateX(-100%);
 }
 
-h1 {
-	color: #333;
+.sidenav a {
+	padding: 8px 8px;
+	text-decoration: none;
+	font-size: 25px;
+	color: #818181;
+	display: block;
+	transition: 0.3s;
 }
 
-#total {
-	font-size: 24px;
-	font-weight: bold;
+.sidenav a:hover {
+	color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+	position: absolute;
+	top: 20px;
+	right: -50px;
+	font-size: 36px;
+}
+
+#main {
+	transition: margin-left 0.5s;
+}
+
+.open-menu {
+	transform: rotate(0deg) translateX(0);
+	width: 250px; /* Adjust width as needed */
 }
