--- a/css/styles.css
+++ b/css/styles.css
@@ -4,35 +4,28 @@ body {
 
 .sidenav {
 	height: 100%;
-	width: 0;
+	width: 250px; /* Increased width */
 	position: fixed;
 	z-index: 1;
 	top: 0;
 	left: 0;
-	background-color: #111;
+	background-color: green; /* Green background */
 	overflow-x: hidden;
 	transition: 0.5s;
-	transform: rotate(-90deg) translateX(-100%);
+	transform: translateX(-100%);
 }
 
 .sidenav a {
-	padding: 8px 8px;
+	padding: 20px;
 	text-decoration: none;
 	font-size: 25px;
-	color: #818181;
+	color: #fff;
 	display: block;
 	transition: 0.3s;
 }
 
 .sidenav a:hover {
-	color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-	position: absolute;
-	top: 20px;
-	right: -50px;
-	font-size: 36px;
+	background-color: #4caf50; /* Darker green on hover */
 }
 
 #main {
@@ -40,6 +33,5 @@ body {
 }
 
 .open-menu {
-	transform: rotate(0deg) translateX(0);
-	width: 250px; /* Adjust width as needed */
+	transform: translateX(0);
 }
