--- a/css/styles.css
+++ b/css/styles.css
@@ -18,10 +18,12 @@ body {
 .sidenav a {
 	padding: 20px;
 	text-decoration: none;
-	font-size: 25px;
+	font-size: 40px; /* Increased font size */
 	color: #fff;
 	display: block;
 	transition: 0.3s;
+	transform: rotate(90deg); /* Rotate text 90 degrees */
+	transform-origin: left bottom; /* Set the origin for rotation */
 }
 
 .sidenav a:hover {
