--- a/css/styles.css
+++ b/css/styles.css
@@ -10,11 +10,12 @@ body {
 
 .container {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 500px;
-    height: 300px;
-    margin: -150px 0 0 -250px;
+    /*top: 10%;
+	margin: -150px 0 0 -250px;
+    left: 50%;*/
+    width: 100%;
+    height: 100%;
+    
     counter-reset: tab-counter 5;
 }
 
