--- a/css/styles.css
+++ b/css/styles.css
@@ -63,4 +63,11 @@ body {
 /* Wenn ein Tab gehovt wird, wird der Inhalt sichtbarer */
 .container label:hover #content {
     opacity: 1;
+	writing-mode: horizontal-tb; /* Text horizontal ausrichten */
+	transform: rotate(0deg); /* Text in normale Richtung drehen */
+	position: absolute;
+	top: 25px;
+	right: 25px;
+	font-size: 4.5rem;
+	font-weight: 1000;
 }
