--- a/css/styles.css
+++ b/css/styles.css
@@ -1,67 +1,85 @@
 body {
-    margin: 0;
-    background: #fff;
-    font-family: "Inter", sans-serif;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+	margin: 0;
+	background: #fff;
+	font-family: "Inter", sans-serif;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 .container {
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    align-items: stretch;
-    justify-content: stretch;
+	display: flex;
+	width: 100vw;
+	height: 100vh;
+	align-items: stretch;
+	justify-content: stretch;
 }
 .container label {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    transition: all 0.8s cubic-bezier(0.11, 0.65, 0.04, 1);
-    position: relative;
-    color: white;
-    font-size: 1.5rem;
+	flex: 1;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	cursor: pointer;
+	transition: all 0.8s cubic-bezier(0.11, 0.65, 0.04, 1);
+	position: relative;
+	color: white;
+	font-size: 1.5rem;
 }
 
 /* Unterschiedliche Farben für die einzelnen Tabs */
-.container label:nth-child(1) { background: #fff; }
-.container label:nth-child(2) { background: #92a8d1; }
-.container label:nth-child(3) { background: #88b04b; }
-.container label:nth-child(4) { background: #f4d35e; }
-.container label:nth-child(5) { background-color: #ff8c81; }
-.container label:nth-child(6) { background-color: #034f84; }
-.container label:nth-child(7) { background-color: #e63946; }
-.container label:nth-child(8) { background: #6b5b95; }
+.container label:nth-child(1) {
+	background: #fff;
+}
+.container label:nth-child(2) {
+	background: #92a8d1;
+}
+.container label:nth-child(3) {
+	background: #88b04b;
+}
+.container label:nth-child(4) {
+	background: #f4d35e;
+}
+.container label:nth-child(5) {
+	background-color: #ff8c81;
+}
+.container label:nth-child(6) {
+	background-color: #034f84;
+}
+.container label:nth-child(7) {
+	background-color: #e63946;
+}
+.container label:nth-child(8) {
+	background: #6b5b95;
+}
 
 /* Wenn über einen Tab gehovert wird */
 .container label:hover {
-    flex: 25; /* Der Tab, über den gehovt wird, nimmt mehr Platz ein */
-    transition: flex 0.8s cubic-bezier(0.11, 0.65, 0.04, 1),
-                background 0.8s ease; /* Übergang für Hintergrundfarbe */
+	flex: 25; /* Der Tab, über den gehovt wird, nimmt mehr Platz ein */
+	transition: flex 0.8s cubic-bezier(0.11, 0.65, 0.04, 1),
+		background 0.8s ease; /* Übergang für Hintergrundfarbe */
 }
 
 /* Textinhalt der Tabs */
 .container label #content {
-    text-align: center;
-    opacity: 0.75; /* Standardmäßige geringere Sichtbarkeit */
-    transition: opacity 0.8s cubic-bezier(0.11, 0.65, 0.04, 1);
-    writing-mode: vertical-rl; /* Text vertikal ausrichten */
-    transform: rotate(180deg); /* Text umdrehen, damit er von unten nach oben liest */
+	text-align: center;
+	opacity: 0.75; /* Standardmäßige geringere Sichtbarkeit */
+	transition: opacity 0.8s cubic-bezier(0.11, 0.65, 0.04, 1);
+	writing-mode: vertical-rl; /* Text vertikal ausrichten */
+	transform: rotate(
+		180deg
+	); /* Text umdrehen, damit er von unten nach oben liest */
 }
 
 /* Wenn ein Tab gehovt wird, wird der Inhalt sichtbarer */
 .container label:hover #content {
-    opacity: 1;
-    writing-mode: horizontal-tb; /* Text horizontal ausrichten */
-    transform: rotate(0deg); /* Text in normale Richtung drehen */
-    position: absolute;
-    top: 25px;
-    right: 25px;
-    font-size: 4.5rem;
-    font-weight: 1000;
+	opacity: 1;
+	writing-mode: horizontal-tb; /* Text horizontal ausrichten */
+	transform: rotate(0deg); /* Text in normale Richtung drehen */
+	position: absolute;
+	top: 25px;
+	right: 25px;
+	font-size: 4.5rem;
+	font-weight: 1000;
 }
 
 .tab-content {
@@ -77,27 +95,27 @@ body {
 
 /* Zeige den Tab-Inhalt beim Hover an */
 .container label:hover .tab-content {
-    display: block; /* Inhalt wird beim Hover angezeigt */
-    z-index: 10;
+	display: block; /* Inhalt wird beim Hover angezeigt */
+	z-index: 10;
 }
 
 .arrow-nav {
-    display: flex; /* Flex-Layout für die Pfeile */
-    justify-content: space-between; /* Verteilung des Abstands zwischen den Pfeilen */
-    margin-top: 250px; /* Abstand nach oben anpassen, um die Pfeile weiter nach unten zu verschieben */
-    margin-left: -350px; /* abstand pfeile */
+	display: flex; /* Flex-Layout für die Pfeile */
+	justify-content: space-between; /* Verteilung des Abstands zwischen den Pfeilen */
+	margin-top: 250px; /* Abstand nach oben anpassen, um die Pfeile weiter nach unten zu verschieben */
+	margin-left: -350px; /* abstand pfeile */
 }
 
 .arrow {
-    background-color: transparent; /* Hintergrund entfernen */
-    color: white; /* Textfarbe für die Pfeile */
-    border: none; /* Rand entfernen */
-    padding: 20px; /* Größere Fläche für die Pfeile */
-    cursor: pointer;
-    font-size: 60px; /* Pfeilgröße erhöhen */
-    transition: color 0.3s; /* Sanfter Übergang für die Farbe beim Hover */
+	background-color: transparent; /* Hintergrund entfernen */
+	color: white; /* Textfarbe für die Pfeile */
+	border: none; /* Rand entfernen */
+	padding: 20px; /* Größere Fläche für die Pfeile */
+	cursor: pointer;
+	font-size: 60px; /* Pfeilgröße erhöhen */
+	transition: color 0.3s; /* Sanfter Übergang für die Farbe beim Hover */
 }
 
 .arrow:hover {
-    color: black; /* Farbe beim Hover ändern */
+	color: black; /* Farbe beim Hover ändern */
 }
