Refactor CSS styles and HTML structure

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,11 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	font-weight: 700;
+}
+.city-name {
+	font-weight: bold;
+	text-transform: uppercase;
 }
 .container {
 	display: flex;
@@ -22,6 +27,7 @@ body {
 	transition: all 0.8s cubic-bezier(0.11, 0.65, 0.04, 1);
 	position: relative;
 	color: white;
+	font-weight: 400;
 	font-size: 1.5rem;
 	flex: 1; /* Standardmäßige Breite der anderen Tabs */
 }
@@ -180,3 +186,4 @@ body {
 .arrow:hover {
 	color: black; /* Farbe beim Hover ändern */
 }
+
